<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/title_reminder"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/notifications_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/corner_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ico_reminder"
                    android:src="@drawable/alert_off" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/notifications"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/customSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:showText="true"
                    android:textColor="@color/switch_text_color_selector"
                    android:textOff="@string/off"
                    android:textOn="@string/on"
                    android:textSize="12sp"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_track_selector" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_background_allow_notification" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/schedule_rounded_corner_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/schedule"
                    android:textColor="@color/gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/start_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:textColor="@color/gray"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Spinner
                        android:id="@+id/start_time_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_background_with_arrow"
                        android:entries="@array/time_entries"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/end_time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end"
                            android:textColor="@color/gray"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Spinner
                        android:id="@+id/end_time_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_background_with_arrow"
                        android:entries="@array/time_entries"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/interval_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_interval"
                            android:textColor="@color/gray"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <Spinner
                        android:id="@+id/interval_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_background_with_arrow"
                        android:entries="@array/interval_entries"
                        android:spinnerMode="dropdown" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/message_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner_background"
                android:enabled="true"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/message"
                        android:textColor="@color/gray"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/message_pro_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pro_button"
                        android:clickable="true"
                        android:contentDescription="@string/pro_button"
                        android:focusable="true"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/its_time_to_drink_water"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/menu_bar"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/home_button"
            android:src="@drawable/ic_home" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/reminder_button"
            android:src="@drawable/ic_clock" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/profile_button"
            android:src="@drawable/ic_user" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>